HW2 fix